--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "uView-demo",
+    "name" : "uni-shop",
     "appid" : "__UNI__DE5C136",
     "description" : "",
     "versionName" : "1.5.0",
